# martin-shkreli-stream

./: .gitignore  Dockerfile  README.md  baby_sql.py  copy_audio.sh  fetch_audio.sh  main.ipynb  prompt.txt  pyproject.toml  setup.sh  transcribe.sh
